--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "five-star",
+  "name": "story-buddy",
   "private": true,
   "version": "0.1.0",
   "description": "A Strapi application",
@@ -9,16 +9,18 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.15.4",
-    "@strapi/plugin-users-permissions": "4.15.4",
-    "@strapi/plugin-i18n": "4.15.4",
     "@strapi/plugin-cloud": "4.15.4",
+    "@strapi/plugin-i18n": "4.15.4",
+    "@strapi/plugin-users-permissions": "4.15.4",
+    "@strapi/provider-upload-cloudinary": "^4.20.4",
+    "@strapi/strapi": "4.15.4",
     "better-sqlite3": "8.6.0",
+    "pg": "^8.11.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
+    "strapi-neon-tech-db-branches": "^0.1.18",
     "styled-components": "5.3.3"
   },
   "author": {
